# gptchain

./: README.md  example.env  gptchain.py  init.sh  pyproject.toml  requirements-train.txt  requirements.txt  train.py  utils.py
deploy/: runpod.py
utils/: data.py  weights.py
